--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "main": "./index.ts",
   "module": "./index.ts",
-  "types": "./index.ts",
+  "types": "./index.d.ts",
   "exports": {
     ".": {
-      "types": "./index.ts",
+      "types": "./index.d.ts",
       "import": "./index.ts"
     },
     "./utils": {
