--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jiosaavn-api-client",
-  "version": "1.0.3",
-  "description": "Pure-JS client for JioSaavn's native API. Works on Node, Bun, Cloudflare Workers, Vercel Edge, and Deno.",
+  "version": "2.0.0",
+  "description": "Complete, type-safe TypeScript client for JioSaavn API. Supports all endpoints including search, songs, albums, artists, and playlists. Works on Node, Bun, Cloudflare Workers, Vercel Edge, and Deno.",
   "type": "module",
   "main": "./index.ts",
   "module": "./index.ts",
@@ -12,35 +12,46 @@
       "import": "./index.ts"
     },
     "./utils": {
-      "types": "./utils.ts",
-      "import": "./utils.ts"
+      "types": "./core/utils.ts",
+      "import": "./core/utils.ts"
     },
     "./fetch": {
-      "types": "./fetch.ts",
-      "import": "./fetch.ts"
+      "types": "./core/fetch.ts",
+      "import": "./core/fetch.ts"
+    },
+    "./endpoints": {
+      "types": "./core/endpoints.ts",
+      "import": "./core/endpoints.ts"
     }
   },
   "files": [
     "*.ts",
     "*.d.ts",
+    "core/*.ts",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
-    "test": "bun run test.js"
+    "test": "bun run test/index.js",
+    "test:schema": "bun run test/index.js --only-schema"
   },
   "keywords": [
     "jiosaavn",
     "saavn",
     "music",
     "api",
+    "client",
+    "typescript",
+    "type-safe",
     "cloudflare-workers",
     "vercel-edge",
     "streaming",
     "download",
     "songs",
     "albums",
-    "playlists"
+    "artists",
+    "playlists",
+    "search"
   ],
   "author": "Kaushal Krishna <kaushalkrishnax@gmail.com>",
   "license": "MIT",
@@ -53,7 +64,8 @@
   },
   "homepage": "https://github.com/kaushalkrishnax/jiosaavn-api-client#readme",
   "dependencies": {
-    "node-forge": "^1.3.3"
+    "node-forge": "^1.3.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/bun": "latest"
